# midas_processor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLANNING.md  README.md  TASK.md  TODO.md  VERIFICATION.md  debug_test.rs  example_verification.sh  requirements.txt  test_csv_reader.rs  verify_parquet_output.py
PRPs/: midas-processor-implementation.md  weather_parquet_spec.md
docs/: Section_4.md  Section_5.md  TEST_DOCUMENTATION.md  badc-csv-parser-guide.md  csv-parser-mermaid-diagram.md  id-evolution-analysis-guide.md  parquet-reading.yaml  parquet-writer-sequence-diagram.md  station-id-evolution-strategy.md  station-registry-sequence-diagram.md  test-documentation.md  validation-commands-guide.md
src/: cli.rs  config.rs  constants.rs  error.rs  header.rs  lib.rs  main.rs  models.rs  processor.rs  schema.rs
src/app/: mod.rs  models.rs
src/app/adapters/: filesystem.rs  mod.rs
src/app/models/: audit.rs
src/app/services/: cache_scanner.rs  csv_parser.rs  integration_test.rs  mod.rs  parquet_writer.rs  record_processor.rs  schema_discovery.rs  station_registry.rs
src/app/services/badc_csv_parser/: column_mapping.rs  field_parsers.rs  header.rs  mod.rs  parser.rs  record_parser.rs  stats.rs
src/app/services/badc_csv_parser/tests/: header_tests.rs  mod.rs  parser_tests.rs  stats_tests.rs
src/app/services/parquet_writer/: config.rs  conversion.rs  mod.rs  progress.rs  schema.rs  utils.rs  writer.rs
src/app/services/parquet_writer/tests/: config_tests.rs  conversion_tests.rs  mod.rs  progress_tests.rs  schema_tests.rs  utils_tests.rs  writer_tests.rs
src/app/services/record_processor/: deduplication.rs  detailed_stats.rs  enrichment.rs  mod.rs  processor.rs  quality_filter.rs  stats.rs
src/app/services/record_processor/tests/: deduplication_tests.rs  enrichment_tests.rs  mod.rs  processor_tests.rs  quality_filter_tests.rs  stats_tests.rs
src/app/services/station_registry/: loader.rs  metadata.rs  mod.rs  parser.rs  query.rs
src/app/services/station_registry/tests/: loader_tests.rs  metadata_tests.rs  mod.rs  parser_tests.rs  query_tests.rs
src/cli/: args.rs  commands.rs  input.rs  mod.rs
src/cli/commands/: mod.rs  observation_stream.rs  parallel_processor.rs  process.rs  shared.rs  stations.rs  validate.rs
src/processor/: discovery.rs  mod.rs  streaming.rs  writer.rs
src/processor/tests/: basic_processing.rs  error_handling.rs  live_cache_test.rs  mod.rs  multi_station.rs  schema_union_tests.rs
tests/: README.md  integration_badc_parser.rs  integration_parquet_writer.rs  validate_parquet.py  verify_parquet_output.py
validation_output/: detailed_stats.json  issues.csv  test_summary.md
