[package]
name = "midas_processor"
version = "0.1.0"
edition = "2024"
default-run = "midas-processor"

[[bin]]
name = "midas-processor"
path = "src/main.rs"

[[bin]]
name = "station-summary"
path = "src/bin/station-summary.rs"

[dependencies]
# Core data processing (temporarily disabled due to version conflict)
# arrow = "48.0"
# parquet = "48.0"
csv = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/time handling
chrono = { version = "0.4.31", features = ["serde"] }

# CLI and argument parsing
clap = { version = "4.0", features = ["derive"] }

# Parallel processing and async runtime
rayon = "1.7"
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress reporting with multi-progress support
indicatif = { version = "0.17", features = ["rayon"] }

# File system operations
walkdir = "2.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Directory management
directories = "5.0"

[dev-dependencies]
# Testing utilities
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
