[package]
name = "midas_processor"
version = "1.1.1"
edition = "2024"
default-run = "midas_processor"
description = "High-performance Rust tool for converting UK Met Office MIDAS weather datasets from BADC-CSV to optimized Parquet format"
license = "MIT"
repository = "https://github.com/rjl-climate/midas_processor"
homepage = "https://github.com/rjl-climate/midas_processor"
documentation = "https://docs.rs/midas_processor"
keywords = ["climate", "weather", "midas", "parquet", "meteorology"]
categories = ["command-line-utilities", "science"]
authors = ["Richard Lyon <richard@rjl.dev>"]
readme = "README.md"

[dependencies]
polars = { version = "0.49", features = [
    "lazy",
    "csv",
    "parquet",
    "dtype-datetime",
    "strings",
    "diagonal_concat",
] }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
glob = "0.3"
indicatif = "0.17"
colored = "2.0"
num_cpus = "1.16"
sysinfo = "0.32"
dirs = "5.0"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }


[profile.release]
# lto = true
# codegen-units = 1
